# PortFolioIQ-Financial-Portfolio-Management-System

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client_profile.csv  client_transaction.csv  company.csv  fundamental_report.csv  portfolio_creation.csv  portfolio_holding.csv  price.csv  pyproject.toml  pyproject.toml.bak  requirements.txt  sector_wise.csv
.github/workflows/: ci.yaml
data/: client_wise_allocation.csv  generates.csv  market_cap_wise.csv  return_Analytics.csv  technical_strategy.csv
docs/: datasets.md
infra/: ds_adls_raw_holdings.json  ds_github_holdings.json  ds_synapse_stg_holdings.json  ls_adls.json  ls_http_github.json  ls_synapse_sql.json  pipeline.copy_github_to_adls.json  pipeline.copy_github_to_synapse_staging.json
sql/: schema_synapse.sql
src/portfolioiq/: __init__.py  config.py  io_utils.py  risk_metrics.py
src/portfolioiq/db/: init_db_synapse.py
src/portfolioiq/jobs/: run_etl_local.py
src/portfolioiq/transform/: scd.py
tests/: test_risk.py  test_scd.py
