[project]
name = "portfolioiq"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "pandas>=2.0.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "pyodbc>=5.1.0",
  "azure-storage-blob>=12.19.1",
  "pyyaml>=6.0.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
